# beamium

./: .gitignore  .travis.yml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Dockerfile.build  Makefile  README.md  build.rs  config.debian.yaml  config.sample.yaml  entrypoint.sh
debian/: beamium.dirs  beamium.init  beamium.install  beamium.postinst  beamium.postrm  beamium.preinst  beamium.service  changelog  control  copyright  default  rules
deploy/kubernetes/: beamium.yaml
src/: cmd.rs  conf.rs  config.rs  constants.rs  log.rs  main.rs  router.rs  scraper.rs  sink.rs  source.rs
src/lib/: mod.rs  transcompiler.rs
src/lib/asynch/: fs.rs  http.rs  mod.rs
src/router/: fs.rs  mod.rs  route.rs  router.rs
src/sink/: fs.rs  mod.rs  send.rs
