[package]
name = "beamium"
version = "2.0.2"
edition = "2018"
build = "build.rs"
authors = [
  "Kevin Georges <kevin.georges@corp.ovh.com>",
  "Florentin DUBOIS <florentin.dubois@corp.ovh.com>"
]

[dependencies]
bytes = "0.4.12"
config = "0.9.3"
failure = "0.1.5"
futures = "0.1.28"
humanize-rs = "0.1.5"
glob = "0.3.0"
structopt = "0.2.18"
slog-async = "2.3.0"
slog-term = "2.4.1"
slog-scope = "4.1.2"
slog-syslog = "0.12.0"
serde = "1.0.98"
serde_derive = "1.0.98"
regex = "1.2.1"
hyper = "0.12.33"
hyper-rustls = "0.16.1"
tokio = "0.1.22"
time = "0.1.42"
crossbeam = "0.7.2"
warp = "0.1.18"
prometheus = "0.7.0"
lazy_static = "1.3.0"
backoff = "0.1.5"

[dependencies.slog]
version = "2.5.2"
features = ["release_max_level_trace", "max_level_trace"]

[dependencies.ctrlc]
version = "3.1.3"
features = ["termination"]

[build-dependencies]
failure = "0.1.5"
git2 = "0.9.2"
time = "0.1.42"

[profile.release]
lto = true
panic = "abort"

[profile.bench]
lto = true
