[package]
name = "beamium"
version = "2.0.7"
edition = "2018"
build = "build.rs"
authors = [
  "Kevin Georges <kevin.georges@corp.ovh.com>",
  "Florentin DUBOIS <florentin.dubois@corp.ovh.com>"
]

[dependencies]
bytes = "0.4.12"
config = "0.9.3"
failure = "0.1.5"
futures = "0.1.29"
humanize-rs = "0.1.5"
glob = "0.3.0"
structopt = { version = "0.3.2", features = ["default", "paw"] }
slog-async = "2.3.0"
slog-term = "2.4.1"
slog-scope = "4.1.2"
slog-syslog = "0.12.0"
serde = "1.0.101"
serde_derive = "1.0.101"
regex = "1.3.1"
hyper = "0.12.35"
hyper-rustls = "0.17.1"
tokio = "0.1.22"
time = "0.1.42"
crossbeam = "0.7.2"
warp = "0.1.20"
prometheus = "0.7.0"
lazy_static = "1.4.0"
backoff = "0.1.5"
paw = "1.0.0"
uuid = { version = "0.7", features = ["v4"] }

[dependencies.slog]
version = "2.5.2"
features = ["release_max_level_trace", "max_level_trace"]

[dependencies.ctrlc]
version = "3.1.3"
features = ["termination"]

[build-dependencies]
failure = "0.1.5"
git2 = "0.10.1"
time = "0.1.42"

[profile.release]
lto = true
panic = "abort"

[profile.bench]
lto = true
